<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.auth.AuthFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/email_auth"
                android:textColor="@color/main"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_email_label"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:drawablePadding="12dp"
                    android:hint="yaljamal@deloitte.com"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="textEmailAddress"
                    android:maxLength="55"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/main"
                    android:textColorHint="@color/neutral_30"
                    android:textDirection="ltr"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/password_auth"
                android:textColor="@color/main"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_password_label"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="@color/brand_aqua">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:hint="ksA2elMXGgiQaOw@"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layoutDirection="locale"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main"
                    android:textColorHint="@color/neutral_30"
                    android:textDirection="locale"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_password">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:enabled="false"
                        android:text="@string/log_in_auth"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>